bug: folder collapse

--- a/www/css/leftpanel.css
+++ b/www/css/leftpanel.css
@@ -21,3 +21,7 @@
     cursor: w-resize;
     float: left;
 }
+
+.sub-item {
+    display: none;
+}
